# green-deck

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  clean_database.py  package-lock.json  pyproject.toml  requirements.txt  run.py
.claude/: settings.local.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-merge-develop.yml  auto-merge-main.yml  auto-pr.yml  auto-release-pr.yml  ci.yml  ci.yml.disable  pr-checks.yml  release.yml
app/: __init__.py  config.py  main.py
app/api/: __init__.py  anki.py  dashboard.py  documents.py  flashcards.py  health.py  history.py  models.py  ollama-status.py  prompts.py  questions.py  topic_segmentation.py  websocket.py
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.ollama.yml  docker-compose.yml  entrypoint.sh
docs/: 20-regras-supermemo.md  commands.md  index.rst  supermemo_checklist.md
frontend/: .eslintrc.json  .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
notebooks/: EDA_database.ipynb
scripts/: bump-version.sh  create_training_data.py  finetune_simple.py  prompts.py  quickstart_finetune.bat  requirements_finetune.txt  setup_embeddings.bat  setup_embeddings.sh  test-anki.py  test_finetuned_model.py  training_data_formatted.jsonl
static/: anki-status.js  claude-api.js  index.html  progress-bar.js  scripts.js  styles.css
test/: modelo_texto_curto.py  text_size_checker.py
tests/: __init__.py  conftest.py  test_health.py  test_text_analysis.py
(+87 files in other folders)
