[tool.poetry]
name = "green-deck"
version = "0.0.0"
description = "AI-Powered Intelligent Flashcard Generator"
authors = ["Erick Bryan Cubas"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
httpx = "^0.28.1"
python-dotenv = "^1.2.1"
numpy = "^2.4.1"
langid = "^1.1.6"
duckdb = "^1.4.3"
python-multipart = "^0.0.21"
docling = "^2.72.0"
pypdf = "^6.6.0"
scikit-learn = "^1.8.0"
nltk = "^3.9.2"
langextract = "^1.1.1"
tenacity = "^9.1.2"
ruff = "^0.14.11"
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
torch = {version = "^2.6.0+cu124", source = "pytorch-cu124"}
torchvision = {version = "^0.21.0+cu124", source = "pytorch-cu124"}
torchaudio = {version = "^2.6.0+cu124", source = "pytorch-cu124"}


[[tool.poetry.source]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
